--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,13 @@
 services:
-  # A Docker web service
   - type: web
-    name: linebot-template-openai
-    runtime: python
-    plan: free
-    autoDeploy: false
+    name: line-gpt-bot
+    env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host=0.0.0.0 --port=${PORT:-5000}
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     envVars:
-    - key: PYTHON_VERSION
-      value: 3.10.12
-    - key: ChannelAccessToken
-      sync: false
-    - key: ChannelSecret
-      sync: false
-    - key: OPENAI_API_KEY
-      sync: false
+      - key: OPENAI_API_KEY
+        sync: false
+      - key: ChannelSecret
+        sync: false
+      - key: ChannelAccessToken
+        sync: false
